# wasm-colour-ga

./: .firebaserc  .gitignore  README.md  firebase.json  package-lock.json  package.json  tailwind.config.js
colour-ga/: Cargo.toml
colour-ga/src/: lib.rs
colour_ga/: Cargo.toml
colour_ga/src/: lib.rs
colour_ga/src/ga_simulation/: mod.rs  utils.rs
colour_ga/src/ga_simulation/utils/: mod.rs
src/: index.html  index.ts  styles.scss
src/components/: GenerationDisplay.ts  GenerationDisplayCard.ts  Notification.ts
