[package]
name = "colour-ga"
version = "0.1.0"
authors = ["Alex Eales <alexeales@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
js-sys = "0.3.32"
wasm-bindgen = "0.2.29"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

[features]
default = ["console_error_panic_hook"]
